--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,16 @@ services:
       - .:/app
     # Expose port 5000 on the container
     ports:
-      - "5000:5000"
+      - "5000"
   nginx:
     # Use the latest NGINX image
     image: nginx:latest
-    # Expose port 80 on the container
+    # Expose port 80 and binds it to port 5000 on the host machine.
     ports:
-      - "80:80"
+      - "5000:80"
     # Mount the nginx.conf file as a volume
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     # Depend on the app service
     depends_on:
       - app
-
